[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Npcs/TestAnimatedSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://NpcTemplate.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Npcs/MovementCollision.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.05051
height = 11.7774

[node name="NpcTemplate" type="Node2D"]
script = ExtResource( 2 )

[node name="MovementCollision" type="KinematicBody2D" parent="."]
modulate = Color( 0.796078, 0.796078, 0.796078, 1 )
collision_mask = 2147483673
script = ExtResource( 3 )

[node name="AnimatedSprite" parent="MovementCollision" instance=ExtResource( 1 )]

[node name="MovementTimer" type="Timer" parent="MovementCollision"]
wait_time = 3.0
one_shot = true

[node name="BodyCollisionBox" type="CollisionShape2D" parent="MovementCollision"]
position = Vector2( 0.447472, 2.44226 )
shape = SubResource( 1 )

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="MovementCollision/MovementTimer" to="MovementCollision" method="_on_MovementTimer_timeout"]
